# finances

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml
contrib/: data_sample.py
finances/: finances.py  models.py
my_finances/: my_finances.py
tests/: conftest.py  test_finances.py  test_my_finances.py
